--- a/src/app.html
+++ b/src/app.html
@@ -6,6 +6,22 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
 	</head>
+	<style>
+		/* Reset some defaults  */
+		* {
+    		margin: 0;
+    		padding: 0;
+    		box-sizing: border-box;
+  		}
+		/* global variables */
+		:root {
+    		--root-bg-color: rgb(229, 229, 229);
+		}
+		body {
+    		background-color: var(--root-bg-color);
+    		font-family: "Poppins", sans-serif;
+		}
+	</style>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
